--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Player: 0 | Computer: 0</h1>
+    <div class="game">
+        <div>
+            <button id="rock"><img src="img/rock.png" alt="Rock"></button>
+        </div>
+        <div>
+            <button id="paper"><img src="img/paper.png" alt="Paper"></button>
+        </div>
+        <div>
+            <button id="scissors"><img src="img/scissors.png" alt="Scissors"></button>
+        </div>
+    </div>
+    <div class="source">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     <script src="js/rock_paper_scissors.js"></script>
 </body>
 </html>
