--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Player: 0 | Computer: 0</h1>
+    <div id="info">
+        <h1 id="heading">Play a game of Rock Paper Scissors!</h1>
+        <h3 class="results" id="com">Lorem.</h3>
+    </div>
     <div class="game">
         <div>
             <button id="rock"><img src="img/rock.png" alt="Rock"></button>
